feat: Overhaul documentation and consolidate whitepapers
- Create a new, comprehensive technical whitepaper (MindLab_Whitepaper.md) for internal use.
- Remove the redundant 'Gated Whitepaper' and 'Public Whitepaper' sections from the public documentation.
- Create new 'Architecture' and 'Glossary' pages to improve the user experience.
- Expand all 'Use Cases' pages with detailed 'Before and After' scenarios.
- Add strategic cross-links and diagrams throughout the documentation to improve clarity and usability.

--- a/core-concepts/the-mindlab-platform.mdx
+++ b/core-concepts/the-mindlab-platform.mdx
@@ -18,6 +18,7 @@ What sets MindLab apart from other AI platforms is our focus on three key areas:
 
 MindLab is more than just a tool; it is a new way of working. By providing a persistent, adaptive intelligence layer, we empower your teams to work smarter, faster, and more effectively.
 
+For a more detailed look at how these components fit together, see our [Architecture](/core-concepts/architecture) page.
 ## Core Components
 
 -   **Orchestrator (runtime MoE):** Converts high-level objectives into a DAG or state machine of sub-tasks, routes each to the best agent and enforces policies. It supports dynamic topologies such as Planner→Solver→Reviewer→Verifier.
