--- a/introduction/welcome.mdx
+++ b/introduction/welcome.mdx
@@ -7,6 +7,13 @@ Welcome to the official documentation for MindLab. This site provides a comprehe
 
 Our mission is to bridge the AI Implementation Gap, moving your organization from a cycle of stalled pilots to a scalable, self-funding AI strategy.
 
+<Card
+  title="Glossary"
+  icon="book"
+  href="/core-concepts/glossary"
+>
+  Learn the key terms and concepts of the MindLab platform.
+</Card>
 <CardGroup cols={2}>
   <Card 
     title="What is MindLab?" 
