--- a/use-cases/cross-industry/customer-ops-and-support.mdx
+++ b/use-cases/cross-industry/customer-ops-and-support.mdx
@@ -25,3 +25,14 @@ The MindLab platform provides a suite of tools for customer operations and suppo
 -   **Auto-triage & intent routing; agent assist suggestions inline.**
 -   **Knowledge base drafts from solved tickets; macro governance.**
 -   **Complaint clustering → product RCA → Jira backlog.**
+### Before MindLab
+
+-   Support agents spend a significant amount of time manually triaging and routing tickets.
+-   Resolutions are inconsistent, depending on the agent who handles the ticket.
+-   There is no systematic process for identifying and addressing the root causes of customer problems.
+
+### After MindLab
+
+-   Tickets are automatically triaged and routed to the right agent, every time.
+-   Agents are provided with real-time assistance, ensuring that all customers receive a consistent and high-quality experience.
+-   Customer support data is systematically analyzed to identify the root causes of problems, allowing you to proactively address them.
