--- a/use-cases/cross-industry/data-and-analytics.mdx
+++ b/use-cases/cross-industry/data-and-analytics.mdx
@@ -24,3 +24,14 @@ The MindLab platform provides a suite of tools for data and analytics. Our platf
 
 -   **Metric drift and lineage checks; dashboard narrative.**
 -   **A/B design & analysis; guardrail monitoring; learnings vault.**
+### Before MindLab
+
+-   Data quality issues go undetected for long periods of time, leading to a loss of trust in the data.
+-   Decision-making is slow and manual, relying on a small team of analysts to provide insights.
+-   A/B tests are often inconclusive or misleading, due to poor design or analysis.
+
+### After MindLab
+
+-   Data quality issues are identified and addressed in real-time, ensuring that your data is always accurate and reliable.
+-   Decision-making is accelerated, with AI-powered insights that are available to everyone in your organization.
+-   A/B tests are more rigorous and reliable, with AI-powered design and analysis.
