--- a/use-cases/cross-industry/finance-and-fpa.mdx
+++ b/use-cases/cross-industry/finance-and-fpa.mdx
@@ -25,3 +25,14 @@ The MindLab platform provides a suite of tools for finance and financial plannin
 -   **Month-close orchestration; variance narratives with linked ledgers.**
 -   **AP/PO/Invoice triage; duplicate/exception detection.**
 -   **Scenario planning; unit economics packs for exec reviews.**
+### Before MindLab
+
+-   The month-end close process is slow and manual, with a high risk of errors.
+-   Financial forecasts are inaccurate and unreliable, leading to poor business decisions.
+-   There is limited visibility into the drivers of financial performance.
+
+### After MindLab
+
+-   The month-end close process is automated and accelerated, with a lower risk of errors.
+-   Financial forecasts are more accurate and reliable, leading to better business decisions.
+-   There is greater visibility into the drivers of financial performance, with AI-powered insights and analysis.
