--- a/use-cases/cross-industry/hr-and-talent.mdx
+++ b/use-cases/cross-industry/hr-and-talent.mdx
@@ -25,3 +25,14 @@ The MindLab platform provides a suite of tools for HR and talent acquisition. Ou
 -   **Role → JD → screen rubric → panel packs.**
 -   **Structured interview notes; bias checks; debrief synthesis.**
 -   **Day-1 runbooks; policy acknowledgement tracking; LMS bridges.**
+### Before MindLab
+
+-   Hiring cycles are slow and manual, with a high risk of bias.
+-   The quality of hires is inconsistent, leading to high employee turnover.
+-   The onboarding experience is inconsistent and often overwhelming for new hires.
+
+### After MindLab
+
+-   Hiring cycles are accelerated and automated, with a lower risk of bias.
+-   The quality of hires is improved, leading to lower employee turnover.
+-   The onboarding experience is personalized and streamlined, ensuring that all new hires have a consistent and high-quality experience.
