--- a/use-cases/cross-industry/it-secops-devops.mdx
+++ b/use-cases/cross-industry/it-secops-devops.mdx
@@ -25,3 +25,14 @@ The MindLab platform provides a suite of tools for IT, SecOps, and DevOps. Our p
 -   **Pager events → guided diagnosis; safe automation with approvals.**
 -   **CAB prep; blast-radius estimation; rollback plans.**
 -   **Vuln dedupe & prioritization; periodic access recertification.**
+### Before MindLab
+
+-   Incident response is slow and manual, with a high risk of human error.
+-   Change management is a bottleneck, with a high change failure rate.
+-   The vulnerability backlog is large and growing, leaving the organization exposed to security risks.
+
+### After MindLab
+
+-   Incident response is accelerated and automated, with a lower risk of human error.
+-   Change management is streamlined and de-risked, with a lower change failure rate.
+-   The vulnerability backlog is reduced and managed, improving the organization's security posture.
