--- a/use-cases/cross-industry/knowledge-ops-and-research.mdx
+++ b/use-cases/cross-industry/knowledge-ops-and-research.mdx
@@ -24,3 +24,14 @@ The MindLab platform provides a suite of tools for knowledge management and rese
 -   **Literature/RFC/RFP synthesis with source-linked briefs.**
 -   **Competitive & market intel digests; delta tracking week-over-week.**
 -   **Policy/procedure harmonization across regions.**
+### Before MindLab
+
+-   Knowledge is fragmented across a variety of sources, making it difficult to find and synthesize information.
+-   The process of synthesizing information and generating insights is slow and manual.
+-   Citations are often weak or missing, making it difficult to verify the accuracy of information.
+
+### After MindLab
+
+-   All of your knowledge sources are brought together in one place, making it easy to find and synthesize information.
+-   The process of synthesizing information and generating insights is accelerated and automated.
+-   All of your work is properly cited and attributed, ensuring that it is accurate and reliable.
