--- a/use-cases/cross-industry/legal-and-compliance.mdx
+++ b/use-cases/cross-industry/legal-and-compliance.mdx
@@ -25,3 +25,14 @@ The MindLab platform provides a suite of tools for legal and compliance operatio
 -   **Contract review with risk heat-maps; fallback clauses.**
 -   **Policy mapping to frameworks (SOC2/ISO/FERPA/GDPR).**
 -   **Audit evidence packets with tamper-evident trace exports.**
+### Before MindLab
+
+-   Contract reviews are slow and manual, with a high risk of human error.
+-   Redlines are inconsistent, leading to a lack of standardization and increased legal risk.
+-   Preparing for an audit is a time-consuming and stressful process.
+
+### After MindLab
+
+-   Contract reviews are accelerated and automated, with a lower risk of human error.
+-   Redlines are consistent and standardized, reducing legal risk.
+-   You are always prepared for your next audit, with a complete and immutable audit trail.
