--- a/use-cases/cross-industry/pmo-and-operations.mdx
+++ b/use-cases/cross-industry/pmo-and-operations.mdx
@@ -24,3 +24,14 @@ The MindLab platform provides a suite of tools for project management and operat
 
 -   **Auto status roll-ups; roadmap deltas; dependency alerts.**
 -   **SOP generation from tribal knowledge; audit prep.**
+### Before MindLab
+
+-   Reporting is slow and manual, making it difficult to get a real-time view of project status.
+-   Project slippage is common, due to a lack of visibility into risks and dependencies.
+-   SOPs are often incomplete or out-of-date, leading to inconsistent and inefficient processes.
+
+### After MindLab
+
+-   Reporting is automated and accelerated, providing a real-time view of project status.
+-   Project slippage is reduced, with AI-powered risk and dependency analysis.
+-   SOPs are complete and up-to-date, ensuring that all processes are consistent and efficient.
