--- a/use-cases/cross-industry/sales-and-revenue.mdx
+++ b/use-cases/cross-industry/sales-and-revenue.mdx
@@ -26,3 +26,16 @@ The MindLab platform provides a suite of tools for sales and revenue operations.
 -   **Account dossiers from CRM/notes; call summaries with action items.**
 -   **Proposal/SoW drafts with clause constraints; discount guardrails.**
 -   **Pipeline hygiene nudges; renewal risk flags.**
+### Before MindLab
+
+-   Sales cycles are slow and manual, with a high risk of human error.
+-   Win rates are low, due to a lack of visibility into customer needs and buying signals.
+-   Discount leakage is common, leading to a loss of revenue and margin.
+-   Sales forecasts are inaccurate and unreliable, leading to poor business decisions.
+
+### After MindLab
+
+-   Sales cycles are accelerated and automated, with a lower risk of human error.
+-   Win rates are improved, with AI-powered insights into customer needs and buying signals.
+-   Discount leakage is prevented, protecting your revenue and margin.
+-   Sales forecasts are more accurate and reliable, leading to better business decisions.
