--- a/use-cases/industry/construction-and-real-estate.mdx
+++ b/use-cases/industry/construction-and-real-estate.mdx
@@ -23,3 +23,16 @@ The MindLab platform provides a suite of tools for the construction and real est
 -   **Bid cycle time ↓**
 -   **Schedule slippage ↓**
 -   **Incident rates ↓**
+### Before MindLab
+
+-   Bid estimation is a slow and manual process, with a high risk of errors.
+-   Schedules are often unrealistic, leading to project slippage and cost overruns.
+-   Safety audits are time-consuming and often fail to identify potential hazards.
+-   Lease analysis is a manual and tedious process, with a high risk of missing key clauses.
+
+### After MindLab
+
+-   Bid estimation is accelerated and automated, with a lower risk of errors.
+-   Schedules are optimized and realistic, reducing project slippage and cost overruns.
+-   Safety audits are more efficient and effective, with AI-powered hazard identification.
+-   Lease analysis is automated and accelerated, with a lower risk of missing key clauses.
