--- a/use-cases/industry/energy-and-utilities.mdx
+++ b/use-cases/industry/energy-and-utilities.mdx
@@ -23,3 +23,16 @@ The MindLab platform provides a suite of tools for the energy and utilities indu
 -   **SAIDI/SAIFI improvements**
 -   **Truck rolls ↓**
 -   **Compliance breaches ↓**
+### Before MindLab
+
+-   Outage response is slow and manual, with a high risk of human error.
+-   Work order planning is inefficient, leading to delays and cost overruns.
+-   Asset health is monitored reactively, leading to unexpected failures and downtime.
+-   Regulatory reporting is a time-consuming and manual process.
+
+### After MindLab
+
+-   Outage response is accelerated and automated, with a lower risk of human error.
+-   Work order planning is optimized and efficient, reducing delays and cost overruns.
+-   Asset health is monitored proactively, preventing unexpected failures and downtime.
+-   Regulatory reporting is automated and streamlined, reducing the risk of compliance breaches.
