--- a/use-cases/industry/logistics-and-supply-chain.mdx
+++ b/use-cases/industry/logistics-and-supply-chain.mdx
@@ -23,3 +23,16 @@ The MindLab platform provides a suite of tools for the logistics and supply chai
 -   **OTIF ↑**
 -   **Detention/demurrage ↓**
 -   **Exception resolution time ↓**
+### Before MindLab
+
+-   Demand forecasting is inaccurate, leading to stockouts and excess inventory.
+-   Route planning is inefficient, leading to delays and increased transportation costs.
+-   Exception management is reactive, leading to poor customer satisfaction.
+-   Supplier collaboration is manual and time-consuming.
+
+### After MindLab
+
+-   Demand forecasting is more accurate, reducing stockouts and excess inventory.
+-   Route planning is optimized, reducing delays and transportation costs.
+-   Exception management is proactive, improving customer satisfaction.
+-   Supplier collaboration is automated and streamlined, improving efficiency and reducing costs.
