--- a/use-cases/industry/manufacturing-and-industry-4-0.mdx
+++ b/use-cases/industry/manufacturing-and-industry-4-0.mdx
@@ -23,3 +23,16 @@ The MindLab platform provides a suite of tools for the manufacturing industry. O
 -   **Safety gates:** The platform includes safety gates that are designed to prevent accidents.
 -   **OT network isolation:** The platform is designed to isolate your operational technology (OT) network.
 -   **Export controls:** The platform is designed to help you to comply with export control regulations.
+### Before MindLab
+
+-   Maintenance is reactive, leading to unexpected downtime and costly repairs.
+-   Quality inspection is a manual and time-consuming process, with a high risk of human error.
+-   Production lines are inefficient, leading to low yield and high costs.
+-   Supplier risk is managed reactively, leading to supply chain disruptions.
+
+### After MindLab
+
+-   Maintenance is predictive, preventing unexpected downtime and reducing repair costs.
+-   Quality inspection is automated and accelerated, with a lower risk of human error.
+-   Production lines are optimized, increasing yield and reducing costs.
+-   Supplier risk is managed proactively, preventing supply chain disruptions.
