--- a/use-cases/industry/public-sector-and-gov.mdx
+++ b/use-cases/industry/public-sector-and-gov.mdx
@@ -23,3 +23,16 @@ The MindLab platform provides a suite of tools for the public sector and governm
 -   **Records laws:** The platform is designed to help you to comply with records laws.
 -   **Accessibility:** The platform is designed to be accessible to all users.
 -   **Security clearance scopes:** The platform is designed to support security clearance scopes.
+### Before MindLab
+
+-   Case management is a slow and manual process, with a high risk of errors.
+-   Grant writing is a time-consuming and complex process.
+-   Policy harmonization is a manual and error-prone process.
+-   FOIA requests are a time-consuming and manual process.
+
+### After MindLab
+
+-   Case management is accelerated and automated, with a lower risk of errors.
+-   Grant writing is accelerated and streamlined, with AI-powered assistance.
+-   Policy harmonization is automated and accelerated, with a lower risk of errors.
+-   FOIA requests are automated and streamlined, reducing the time and cost of compliance.
