--- a/use-cases/industry/retail-and-ecommerce.mdx
+++ b/use-cases/industry/retail-and-ecommerce.mdx
@@ -24,3 +24,16 @@ The MindLab platform provides a suite of tools for the retail and eCommerce indu
 -   **NPS ↑**
 -   **Return abuse ↓**
 -   **Catalog error rate ↓**
+### Before MindLab
+
+-   Assortment planning is a manual and time-consuming process, with a high risk of errors.
+-   Pricing and promotion analysis is a manual and time-consuming process, with a high risk of errors.
+-   Catalog normalization is a manual and time-consuming process, with a high risk of errors.
+-   Returns triage is a manual and time-consuming process, with a high risk of errors.
+
+### After MindLab
+
+-   Assortment planning is accelerated and automated, with a lower risk of errors.
+-   Pricing and promotion analysis is accelerated and automated, with a lower risk of errors.
+-   Catalog normalization is accelerated and automated, with a lower risk of errors.
+-   Returns triage is accelerated and automated, with a lower risk of errors.
