refactor: Streamline and enhance documentation
- Merge 'Core Concepts' and 'In-Depth' sections to remove redundancy.
- Rename 'in-depth' files to have more descriptive names.
- Move 'Domain Packs' to the 'Use Cases' section for better organization.
- Update messaging to reflect the current focus on the 'EDU Pack' pilot.

--- a/core-concepts/agents.mdx
+++ b/core-concepts/agents.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Agents: In-Depth"
+title: "Agents"
 description: "A deep dive into the different types of agents in the MindLab platform."
 icon: "users"
 ---
