--- a/core-concepts/flow-engine.mdx
+++ b/core-concepts/flow-engine.mdx
@@ -1,14 +1,13 @@
 ---
 title: "The Flow Engine"
-description: "A deterministic, stateful execution layer for guaranteed outcomes."
-icon: "gears"
+description: "A deep dive into the deterministic, stateful execution layer that provides enterprise-grade guarantees."
 ---
 
 Underpinning the Orchestrator and the Context Spine is the Flow Engine, the stateful execution layer that ensures every workflow is executed with precision, predictability, and resilience.
 
 The Flow Engine is designed to provide enterprise-grade guarantees about the state of your AI-driven work. It is not a "best-effort" system; it is a deterministic engine that provides full control over side effects and enables powerful debugging and auditing capabilities.
 
-### Core Architectural Features
+## Core Architectural Features
 
 <CardGroup cols={2}>
   <Card title="Deterministic DAGs" icon="diagram-project">
