--- a/core-concepts/models.mdx
+++ b/core-concepts/models.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Models"
-description: "A look at the different models that power the MindLab platform."
+description: "A deep dive into the different AI models that power the MindLab platform."
 icon: "brain-circuit"
 ---
 
@@ -10,9 +10,9 @@ The MindLab platform is powered by a variety of state-of-the-art AI models. We a
 
 We believe that a multi-model approach is the key to building a truly intelligent system. That's why we have integrated a variety of models into our platform, each with its own unique strengths and capabilities.
 
--   **Large Language Models (LLMs):** We use a variety of LLMs to power our natural language processing capabilities.
--   **Computer Vision Models:** We use a variety of computer vision models to power our image and video analysis capabilities.
--   **Data Science Models:** We use a variety of data science models to power our data analysis and visualization capabilities.
+-   **Large Language Models (LLMs):** We use a variety of LLMs to power our natural language processing capabilities. These models are the foundation of our platform, and they are what allow our agents to understand and generate human language.
+-   **Computer Vision Models:** We use a variety of computer vision models to power our image and video analysis capabilities. These models allow our agents to see and understand the world around them.
+-   **Data Science Models:** We use a variety of data science models to power our data analysis and visualization capabilities. These models allow our agents to find insights and patterns in your data.
 
 ## A Commitment to Openness
 
