--- a/core-concepts/teams.mdx
+++ b/core-concepts/teams.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Teams: In-Depth"
+title: "Teams"
 description: "A detailed look at how to create and manage teams in the MindLab platform."
 icon: "users"
 ---
