--- a/governance/domain-packs.mdx
+++ b/governance/domain-packs.mdx
@@ -16,7 +16,12 @@ A domain pack is a collection of pre-built components that are designed to accel
 
 ## Available Domain Packs
 
--   **Education:** A complete solution for K-12 and higher education.
+-   **Education:** Our flagship "EDU Pack" is a complete solution for K-12 and higher education. We are currently piloting this pack with a select group of partners.
+
+## Coming Soon
+
+We are actively working to expand our offerings to other industries. The following domain packs are currently in development:
+
 -   **HR:** A suite of tools for talent acquisition, onboarding, and employee engagement.
 -   **Legal/Compliance:** A set of tools for contract analysis, e-discovery, and compliance monitoring.
 -   **Research:** A suite of tools for literature synthesis, experimental design, and data analysis.
