--- a/introduction/what-is-mindlab.mdx
+++ b/introduction/what-is-mindlab.mdx
@@ -6,6 +6,8 @@ icon: "brain-circuit"
 
 MindLab is a sophisticated, enterprise-grade intelligence layer designed to solve the critical challenges of AI adoption in business. It is not a single AI, but a coordinated ecosystem of specialist agents that are managed by a powerful orchestration engine.
 
+We are currently piloting the MindLab platform with a focus on the education sector, with our flagship "EDU Pack." We are actively working to expand our offerings to other industries in the near future.
+
 ## The MindLab Difference
 
 What sets MindLab apart from other AI platforms is our focus on three key areas:
