--- a/use-cases/cross-industry/customer-ops-and-support.mdx
+++ b/use-cases/cross-industry/customer-ops-and-support.mdx
@@ -1,4 +1,7 @@
 ---
+title: "customer-ops-and-support (Coming Soon)"
+---
+---
 title: "Customer Ops & Support"
 description: "A suite of tools for customer operations and support."
 icon: "users"
