--- a/use-cases/cross-industry/data-and-analytics.mdx
+++ b/use-cases/cross-industry/data-and-analytics.mdx
@@ -1,4 +1,7 @@
 ---
+title: "data-and-analytics (Coming Soon)"
+---
+---
 title: "Data & Analytics"
 description: "A suite of tools for data and analytics."
 icon: "chart-bar"
