--- a/use-cases/cross-industry/finance-and-fpa.mdx
+++ b/use-cases/cross-industry/finance-and-fpa.mdx
@@ -1,4 +1,7 @@
 ---
+title: "finance-and-fpa (Coming Soon)"
+---
+---
 title: "Finance & FP&A"
 description: "A suite of tools for finance and financial planning and analysis."
 icon: "chart-line"
