--- a/use-cases/cross-industry/hr-and-talent.mdx
+++ b/use-cases/cross-industry/hr-and-talent.mdx
@@ -1,4 +1,7 @@
 ---
+title: "hr-and-talent (Coming Soon)"
+---
+---
 title: "HR & Talent"
 description: "A suite of tools for HR and talent acquisition."
 icon: "users"
