--- a/use-cases/cross-industry/it-secops-devops.mdx
+++ b/use-cases/cross-industry/it-secops-devops.mdx
@@ -1,4 +1,7 @@
 ---
+title: "it-secops-devops (Coming Soon)"
+---
+---
 title: "IT / SecOps / DevOps"
 description: "A suite of tools for IT, SecOps, and DevOps."
 icon: "server"
