--- a/use-cases/cross-industry/knowledge-ops-and-research.mdx
+++ b/use-cases/cross-industry/knowledge-ops-and-research.mdx
@@ -1,4 +1,7 @@
 ---
+title: "knowledge-ops-and-research (Coming Soon)"
+---
+---
 title: "Knowledge Ops & Research"
 description: "A suite of tools for knowledge management and research."
 icon: "book"
