--- a/use-cases/cross-industry/legal-and-compliance.mdx
+++ b/use-cases/cross-industry/legal-and-compliance.mdx
@@ -1,4 +1,7 @@
 ---
+title: "legal-and-compliance (Coming Soon)"
+---
+---
 title: "Legal & Compliance"
 description: "A suite of tools for legal and compliance operations."
 icon: "gavel"
