--- a/use-cases/cross-industry/marketing-and-content.mdx
+++ b/use-cases/cross-industry/marketing-and-content.mdx
@@ -1,4 +1,7 @@
 ---
+title: "marketing-and-content (Coming Soon)"
+---
+---
 title: "Marketing & Content"
 description: "A suite of tools for marketing and content operations."
 icon: "bullhorn"
