--- a/use-cases/cross-industry/pmo-and-operations.mdx
+++ b/use-cases/cross-industry/pmo-and-operations.mdx
@@ -1,4 +1,7 @@
 ---
+title: "pmo-and-operations (Coming Soon)"
+---
+---
 title: "PMO & Operations"
 description: "A suite of tools for project management and operations."
 icon: "clipboard-check"
