--- a/use-cases/cross-industry/sales-and-revenue.mdx
+++ b/use-cases/cross-industry/sales-and-revenue.mdx
@@ -1,4 +1,7 @@
 ---
+title: "sales-and-revenue (Coming Soon)"
+---
+---
 title: "Sales & Revenue"
 description: "A suite of tools for sales and revenue operations."
 icon: "dollar-sign"
