--- a/use-cases/industry/construction-and-real-estate.mdx
+++ b/use-cases/industry/construction-and-real-estate.mdx
@@ -1,4 +1,7 @@
 ---
+title: "construction-and-real-estate (Coming Soon)"
+---
+---
 title: "Construction & Real Estate"
 description: "A suite of tools for the construction and real estate industries."
 icon: "building"
