--- a/use-cases/industry/energy-and-utilities.mdx
+++ b/use-cases/industry/energy-and-utilities.mdx
@@ -1,4 +1,7 @@
 ---
+title: "energy-and-utilities (Coming Soon)"
+---
+---
 title: "Energy & Utilities"
 description: "A suite of tools for the energy and utilities industries."
 icon: "bolt"
