--- a/use-cases/industry/financial-services-and-insurance.mdx
+++ b/use-cases/industry/financial-services-and-insurance.mdx
@@ -1,4 +1,7 @@
 ---
+title: "financial-services-and-insurance (Coming Soon)"
+---
+---
 title: "Financial Services & Insurance"
 description: "A suite of tools for the financial services and insurance industries."
 icon: "building-columns"
