--- a/use-cases/industry/healthcare.mdx
+++ b/use-cases/industry/healthcare.mdx
@@ -1,4 +1,7 @@
 ---
+title: "healthcare (Coming Soon)"
+---
+---
 title: "Healthcare"
 description: "A secure, compliant intelligence layer for the healthcare industry."
 icon: "briefcase-medical"
