--- a/use-cases/industry/logistics-and-supply-chain.mdx
+++ b/use-cases/industry/logistics-and-supply-chain.mdx
@@ -1,4 +1,7 @@
 ---
+title: "logistics-and-supply-chain (Coming Soon)"
+---
+---
 title: "Logistics & Supply Chain"
 description: "A suite of tools for the logistics and supply chain industries."
 icon: "truck"
