--- a/use-cases/industry/manufacturing-and-industry-4-0.mdx
+++ b/use-cases/industry/manufacturing-and-industry-4-0.mdx
@@ -1,4 +1,7 @@
 ---
+title: "manufacturing-and-industry-4-0 (Coming Soon)"
+---
+---
 title: "Manufacturing & Industry 4.0"
 description: "A suite of tools for the manufacturing industry."
 icon: "industry"
