--- a/use-cases/industry/public-sector-and-gov.mdx
+++ b/use-cases/industry/public-sector-and-gov.mdx
@@ -1,4 +1,7 @@
 ---
+title: "public-sector-and-gov (Coming Soon)"
+---
+---
 title: "Public Sector & Gov"
 description: "A suite of tools for the public sector and government."
 icon: "landmark"
