--- a/use-cases/industry/retail-and-ecommerce.mdx
+++ b/use-cases/industry/retail-and-ecommerce.mdx
@@ -1,4 +1,7 @@
 ---
+title: "retail-and-ecommerce (Coming Soon)"
+---
+---
 title: "Retail & eCommerce"
 description: "A suite of tools for the retail and eCommerce industries."
 icon: "store"
