--- a/use-cases/industry/education.mdx
+++ b/use-cases/industry/education.mdx
@@ -1,4 +1,7 @@
 ---
+title: "education (Coming Soon)"
+---
+---
 title: "Education"
 description: "A complete solution for K-12 and higher education."
 icon: "graduation-cap"
