--- a/use-cases/industry/life-sciences-and-pharma.mdx
+++ b/use-cases/industry/life-sciences-and-pharma.mdx
@@ -1,4 +1,7 @@
 ---
+title: "life-sciences-and-pharma (Coming Soon)"
+---
+---
 title: "Life Sciences & Pharma"
 description: "A suite of tools for the life sciences and pharma industries."
 icon: "flask"
