refactor: Final documentation cleanup and standardization
- Rename all 'in-depth' files to have more descriptive names.
- Standardize the titles and icons of all use case files.
- Update messaging to reflect the current focus on the 'EDU Pack' pilot.
- Update docs.json to reflect all file name and title changes.

--- a/core-concepts/tools.mdx
+++ b/core-concepts/tools.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Tools: In-Depth"
+title: "Tools"
 description: "A guide to the different tools that are available in the MindLab platform."
 icon: "wrench"
 ---
