--- a/use-cases/cross-industry/customer-ops-and-support.mdx
+++ b/use-cases/cross-industry/customer-ops-and-support.mdx
@@ -1,8 +1,5 @@
 ---
-title: "customer-ops-and-support (Coming Soon)"
----
----
-title: "Customer Ops & Support"
+title: "Customer Ops And Support (Coming Soon)"
 description: "A suite of tools for customer operations and support."
 icon: "users"
 ---
@@ -28,6 +25,7 @@ The MindLab platform provides a suite of tools for customer operations and suppo
 -   **Auto-triage & intent routing; agent assist suggestions inline.**
 -   **Knowledge base drafts from solved tickets; macro governance.**
 -   **Complaint clustering → product RCA → Jira backlog.**
+
 ### Before MindLab
 
 -   Support agents spend a significant amount of time manually triaging and routing tickets.
