--- a/use-cases/cross-industry/data-and-analytics.mdx
+++ b/use-cases/cross-industry/data-and-analytics.mdx
@@ -1,8 +1,8 @@
 ---
-title: "data-and-analytics (Coming Soon)"
+title: "Data And Analytics (Coming Soon)"
 ---
 ---
-title: "Data & Analytics"
+title: "Data And Analytics (Coming Soon)"
 description: "A suite of tools for data and analytics."
 icon: "chart-bar"
 ---
