--- a/use-cases/cross-industry/finance-and-fpa.mdx
+++ b/use-cases/cross-industry/finance-and-fpa.mdx
@@ -1,8 +1,8 @@
 ---
-title: "finance-and-fpa (Coming Soon)"
+title: "Finance And Fpa (Coming Soon)"
 ---
 ---
-title: "Finance & FP&A"
+title: "Finance And Fpa (Coming Soon)"
 description: "A suite of tools for finance and financial planning and analysis."
 icon: "chart-line"
 ---
