--- a/use-cases/cross-industry/hr-and-talent.mdx
+++ b/use-cases/cross-industry/hr-and-talent.mdx
@@ -1,8 +1,8 @@
 ---
-title: "hr-and-talent (Coming Soon)"
+title: "Hr And Talent (Coming Soon)"
 ---
 ---
-title: "HR & Talent"
+title: "Hr And Talent (Coming Soon)"
 description: "A suite of tools for HR and talent acquisition."
 icon: "users"
 ---
