--- a/use-cases/cross-industry/knowledge-ops-and-research.mdx
+++ b/use-cases/cross-industry/knowledge-ops-and-research.mdx
@@ -1,8 +1,8 @@
 ---
-title: "knowledge-ops-and-research (Coming Soon)"
+title: "Knowledge Ops And Research (Coming Soon)"
 ---
 ---
-title: "Knowledge Ops & Research"
+title: "Knowledge Ops And Research (Coming Soon)"
 description: "A suite of tools for knowledge management and research."
 icon: "book"
 ---
