--- a/use-cases/cross-industry/legal-and-compliance.mdx
+++ b/use-cases/cross-industry/legal-and-compliance.mdx
@@ -1,8 +1,8 @@
 ---
-title: "legal-and-compliance (Coming Soon)"
+title: "Legal And Compliance (Coming Soon)"
 ---
 ---
-title: "Legal & Compliance"
+title: "Legal And Compliance (Coming Soon)"
 description: "A suite of tools for legal and compliance operations."
 icon: "gavel"
 ---
