--- a/use-cases/cross-industry/marketing-and-content.mdx
+++ b/use-cases/cross-industry/marketing-and-content.mdx
@@ -1,8 +1,8 @@
 ---
-title: "marketing-and-content (Coming Soon)"
+title: "Marketing And Content (Coming Soon)"
 ---
 ---
-title: "Marketing & Content"
+title: "Marketing And Content (Coming Soon)"
 description: "A suite of tools for marketing and content operations."
 icon: "bullhorn"
 ---
