--- a/use-cases/cross-industry/sales-and-revenue.mdx
+++ b/use-cases/cross-industry/sales-and-revenue.mdx
@@ -1,8 +1,8 @@
 ---
-title: "sales-and-revenue (Coming Soon)"
+title: "Sales And Revenue (Coming Soon)"
 ---
 ---
-title: "Sales & Revenue"
+title: "Sales And Revenue (Coming Soon)"
 description: "A suite of tools for sales and revenue operations."
 icon: "dollar-sign"
 ---
