--- a/use-cases/industry/construction-and-real-estate.mdx
+++ b/use-cases/industry/construction-and-real-estate.mdx
@@ -1,8 +1,8 @@
 ---
-title: "construction-and-real-estate (Coming Soon)"
+title: "Construction And Real Estate (Coming Soon)"
 ---
 ---
-title: "Construction & Real Estate"
+title: "Construction And Real Estate (Coming Soon)"
 description: "A suite of tools for the construction and real estate industries."
 icon: "building"
 ---
