--- a/use-cases/industry/education.mdx
+++ b/use-cases/industry/education.mdx
@@ -1,8 +1,8 @@
 ---
-title: "education (Coming Soon)"
+title: "Education (Coming Soon)"
 ---
 ---
-title: "Education"
+title: "Education (Coming Soon)"
 description: "A complete solution for K-12 and higher education."
 icon: "graduation-cap"
 ---
