--- a/use-cases/industry/energy-and-utilities.mdx
+++ b/use-cases/industry/energy-and-utilities.mdx
@@ -1,8 +1,8 @@
 ---
-title: "energy-and-utilities (Coming Soon)"
+title: "Energy And Utilities (Coming Soon)"
 ---
 ---
-title: "Energy & Utilities"
+title: "Energy And Utilities (Coming Soon)"
 description: "A suite of tools for the energy and utilities industries."
 icon: "bolt"
 ---
