--- a/use-cases/industry/financial-services-and-insurance.mdx
+++ b/use-cases/industry/financial-services-and-insurance.mdx
@@ -1,8 +1,8 @@
 ---
-title: "financial-services-and-insurance (Coming Soon)"
+title: "Financial Services And Insurance (Coming Soon)"
 ---
 ---
-title: "Financial Services & Insurance"
+title: "Financial Services And Insurance (Coming Soon)"
 description: "A suite of tools for the financial services and insurance industries."
 icon: "building-columns"
 ---
