--- a/use-cases/industry/healthcare.mdx
+++ b/use-cases/industry/healthcare.mdx
@@ -1,8 +1,8 @@
 ---
-title: "healthcare (Coming Soon)"
+title: "Healthcare (Coming Soon)"
 ---
 ---
-title: "Healthcare"
+title: "Healthcare (Coming Soon)"
 description: "A secure, compliant intelligence layer for the healthcare industry."
 icon: "briefcase-medical"
 ---
