--- a/use-cases/industry/life-sciences-and-pharma.mdx
+++ b/use-cases/industry/life-sciences-and-pharma.mdx
@@ -1,8 +1,8 @@
 ---
-title: "life-sciences-and-pharma (Coming Soon)"
+title: "Life Sciences And Pharma (Coming Soon)"
 ---
 ---
-title: "Life Sciences & Pharma"
+title: "Life Sciences And Pharma (Coming Soon)"
 description: "A suite of tools for the life sciences and pharma industries."
 icon: "flask"
 ---
