--- a/use-cases/industry/logistics-and-supply-chain.mdx
+++ b/use-cases/industry/logistics-and-supply-chain.mdx
@@ -1,8 +1,8 @@
 ---
-title: "logistics-and-supply-chain (Coming Soon)"
+title: "Logistics And Supply Chain (Coming Soon)"
 ---
 ---
-title: "Logistics & Supply Chain"
+title: "Logistics And Supply Chain (Coming Soon)"
 description: "A suite of tools for the logistics and supply chain industries."
 icon: "truck"
 ---
