--- a/use-cases/industry/manufacturing-and-industry-4-0.mdx
+++ b/use-cases/industry/manufacturing-and-industry-4-0.mdx
@@ -1,8 +1,8 @@
 ---
-title: "manufacturing-and-industry-4-0 (Coming Soon)"
+title: "Manufacturing And Industry 4 0 (Coming Soon)"
 ---
 ---
-title: "Manufacturing & Industry 4.0"
+title: "Manufacturing And Industry 4 0 (Coming Soon)"
 description: "A suite of tools for the manufacturing industry."
 icon: "industry"
 ---
