--- a/use-cases/cross-industry/pmo-and-operations.mdx
+++ b/use-cases/cross-industry/pmo-and-operations.mdx
@@ -1,8 +1,8 @@
 ---
-title: "pmo-and-operations (Coming Soon)"
+title: "Pmo And Operations (Coming Soon)"
 ---
 ---
-title: "PMO & Operations"
+title: "Pmo And Operations (Coming Soon)"
 description: "A suite of tools for project management and operations."
 icon: "clipboard-check"
 ---
