--- a/use-cases/industry/public-sector-and-gov.mdx
+++ b/use-cases/industry/public-sector-and-gov.mdx
@@ -1,8 +1,8 @@
 ---
-title: "public-sector-and-gov (Coming Soon)"
+title: "Public Sector And Gov (Coming Soon)"
 ---
 ---
-title: "Public Sector & Gov"
+title: "Public Sector And Gov (Coming Soon)"
 description: "A suite of tools for the public sector and government."
 icon: "landmark"
 ---
