--- a/use-cases/industry/retail-and-ecommerce.mdx
+++ b/use-cases/industry/retail-and-ecommerce.mdx
@@ -1,8 +1,8 @@
 ---
-title: "retail-and-ecommerce (Coming Soon)"
+title: "Retail And Ecommerce (Coming Soon)"
 ---
 ---
-title: "Retail & eCommerce"
+title: "Retail And Ecommerce (Coming Soon)"
 description: "A suite of tools for the retail and eCommerce industries."
 icon: "store"
 ---
